--- a/OpenCNCPilot/App.config
+++ b/OpenCNCPilot/App.config
@@ -1,6 +1,30 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="OpenCNCPilot.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
+    <userSettings>
+        <OpenCNCPilot.Settings>
+            <setting name="MainWindowHeight" serializeAs="String">
+                <value>500</value>
+            </setting>
+            <setting name="MainWindowWidth" serializeAs="String">
+                <value>800</value>
+            </setting>
+            <setting name="MainWindowSplit" serializeAs="String">
+                <value>600</value>
+            </setting>
+            <setting name="ViewportShowCoordinateSystem" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="ViewportShowFpsCounter" serializeAs="String">
+                <value>True</value>
+            </setting>
+        </OpenCNCPilot.Settings>
+    </userSettings>
 </configuration>
