progres and testing on parsing and visualization

--- a/OpenCNCPilot/App.config
+++ b/OpenCNCPilot/App.config
@@ -29,6 +29,9 @@
             <setting name="ExternalEditorCommandLine" serializeAs="String">
                 <value>notepad {0}</value>
             </setting>
+            <setting name="ViewportArcSplit" serializeAs="String">
+                <value>1</value>
+            </setting>
         </OpenCNCPilot.Properties.Settings>
         <OpenCNCPilot.Settings>
             <setting name="MainWindowHeight" serializeAs="String">
