--- a/OpenCNCPilot/App.config
+++ b/OpenCNCPilot/App.config
@@ -32,6 +32,18 @@
             <setting name="ViewportArcSplit" serializeAs="String">
                 <value>1</value>
             </setting>
+            <setting name="ViewportGridStroke" serializeAs="String">
+                <value>0.05</value>
+            </setting>
+            <setting name="ViewportGridMinor" serializeAs="String">
+                <value>1</value>
+            </setting>
+            <setting name="ViewportGridMajor" serializeAs="String">
+                <value>10</value>
+            </setting>
+            <setting name="ViewportShowGrid" serializeAs="String">
+                <value>True</value>
+            </setting>
         </OpenCNCPilot.Properties.Settings>
         <OpenCNCPilot.Settings>
             <setting name="MainWindowHeight" serializeAs="String">
