added "save gcode"
also fixed feedrate parsing error
removed unnecessary using directives

--- a/OpenCNCPilot/App.config
+++ b/OpenCNCPilot/App.config
@@ -44,6 +44,9 @@
             <setting name="ViewportShowGrid" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="OutputDecimalDigits" serializeAs="String">
+                <value>3</value>
+            </setting>
         </OpenCNCPilot.Properties.Settings>
         <OpenCNCPilot.Settings>
             <setting name="MainWindowHeight" serializeAs="String">
