whole ton of changes

--- a/OpenCNCPilot/App.config
+++ b/OpenCNCPilot/App.config
@@ -26,8 +26,8 @@
             <setting name="ViewportShowFpsCounter" serializeAs="String">
                 <value>True</value>
             </setting>
-            <setting name="ExternalEditorCommandLine" serializeAs="String">
-                <value>notepad {0}</value>
+            <setting name="ExternalEditor" serializeAs="String">
+                <value>notepad</value>
             </setting>
             <setting name="ViewportArcSplit" serializeAs="String">
                 <value>1</value>
@@ -36,16 +36,19 @@
                 <value>0.05</value>
             </setting>
             <setting name="ViewportGridMinor" serializeAs="String">
-                <value>1</value>
+                <value>10</value>
             </setting>
             <setting name="ViewportGridMajor" serializeAs="String">
-                <value>10</value>
+                <value>50</value>
             </setting>
             <setting name="ViewportShowGrid" serializeAs="String">
                 <value>True</value>
             </setting>
             <setting name="OutputDecimalDigits" serializeAs="String">
                 <value>3</value>
+            </setting>
+            <setting name="Setting" serializeAs="String">
+                <value />
             </setting>
         </OpenCNCPilot.Properties.Settings>
         <OpenCNCPilot.Settings>
