--- a/OpenCNCPilot/OpenCNCPilot.csproj
+++ b/OpenCNCPilot/OpenCNCPilot.csproj
@@ -66,6 +66,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="CreateHeightMapDialog.xaml.cs">
+      <DependentUpon>CreateHeightMapDialog.xaml</DependentUpon>
+    </Compile>
     <Compile Include="GCode\GCodeCommands\Arc.cs" />
     <Compile Include="GCode\GCodeCommands\Command.cs" />
     <Compile Include="GCode\GCodeCommands\Line.cs" />
@@ -74,6 +77,7 @@
     <Compile Include="GCode\GCodeFile.cs" />
     <Compile Include="GCode\GCodeParser.cs" />
     <Compile Include="GCode\ParseException.cs" />
+    <Compile Include="Util\Constants.cs" />
     <Compile Include="Util\Vector2.cs" />
     <Compile Include="Util\Vector3.cs" />
     <Compile Include="HeightMap.cs" />
@@ -82,6 +86,10 @@
       <DependentUpon>SettingsWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="Util\GrblErrorProvider.cs" />
+    <Page Include="CreateHeightMapDialog.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
