--- a/OpenCNCPilot/Properties/Settings.settings
+++ b/OpenCNCPilot/Properties/Settings.settings
@@ -17,8 +17,8 @@
     <Setting Name="ViewportShowFpsCounter" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
-    <Setting Name="ExternalEditorCommandLine" Type="System.String" Scope="User">
-      <Value Profile="(Default)">notepad {0}</Value>
+    <Setting Name="ExternalEditor" Type="System.String" Scope="User">
+      <Value Profile="(Default)">notepad</Value>
     </Setting>
     <Setting Name="ViewportArcSplit" Type="System.Double" Scope="User">
       <Value Profile="(Default)">1</Value>
@@ -27,16 +27,19 @@
       <Value Profile="(Default)">0.05</Value>
     </Setting>
     <Setting Name="ViewportGridMinor" Type="System.Double" Scope="User">
-      <Value Profile="(Default)">1</Value>
+      <Value Profile="(Default)">10</Value>
     </Setting>
     <Setting Name="ViewportGridMajor" Type="System.Double" Scope="User">
-      <Value Profile="(Default)">10</Value>
+      <Value Profile="(Default)">50</Value>
     </Setting>
     <Setting Name="ViewportShowGrid" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="OutputDecimalDigits" Type="System.Byte" Scope="User">
       <Value Profile="(Default)">3</Value>
+    </Setting>
+    <Setting Name="Setting" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
     </Setting>
   </Settings>
 </SettingsFile>
