--- a/OpenCNCPilot/OpenCNCPilot.csproj
+++ b/OpenCNCPilot/OpenCNCPilot.csproj
@@ -80,8 +80,8 @@
     <Compile Include="Util\Constants.cs" />
     <Compile Include="Util\Vector2.cs" />
     <Compile Include="Util\Vector3.cs" />
-    <Compile Include="HeightMap.cs" />
-    <Compile Include="SettingsBinding.cs" />
+    <Compile Include="GCode\HeightMap.cs" />
+    <Compile Include="Util\SettingsBinding.cs" />
     <Compile Include="SettingsWindow.xaml.cs">
       <DependentUpon>SettingsWindow.xaml</DependentUpon>
     </Compile>
