--- a/OpenCNCPilot/App.config
+++ b/OpenCNCPilot/App.config
@@ -47,8 +47,20 @@
             <setting name="OutputDecimalDigits" serializeAs="String">
                 <value>3</value>
             </setting>
-            <setting name="Setting" serializeAs="String">
+            <setting name="SerialPort" serializeAs="String">
                 <value />
+            </setting>
+            <setting name="RemoteHost" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="ConnectionType" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="ControllerType" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="ControllerBuffer" serializeAs="String">
+                <value>100</value>
             </setting>
         </OpenCNCPilot.Properties.Settings>
         <OpenCNCPilot.Settings>
