--- a/OpenCNCPilot/OpenCNCPilot.csproj
+++ b/OpenCNCPilot/OpenCNCPilot.csproj
@@ -66,7 +66,12 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="CreateHeightMapDialog.xaml.cs">
+    <Compile Include="Connection\Connection.cs" />
+    <Compile Include="Connection\SerialConnection.cs" />
+    <Compile Include="Connection\TCPConnection.cs" />
+    <Compile Include="Controller\Controller.cs" />
+    <Compile Include="Controller\GRBL09.cs" />
+    <Compile Include="UI\CreateHeightMapDialog.xaml.cs">
       <DependentUpon>CreateHeightMapDialog.xaml</DependentUpon>
     </Compile>
     <Compile Include="GCode\GCodeCommands\Arc.cs" />
@@ -82,15 +87,15 @@
     <Compile Include="Util\Vector3.cs" />
     <Compile Include="GCode\HeightMap.cs" />
     <Compile Include="Util\SettingsBinding.cs" />
-    <Compile Include="SettingsWindow.xaml.cs">
+    <Compile Include="UI\SettingsWindow.xaml.cs">
       <DependentUpon>SettingsWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="Util\GrblErrorProvider.cs" />
-    <Page Include="CreateHeightMapDialog.xaml">
+    <Page Include="UI\CreateHeightMapDialog.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="MainWindow.xaml">
+    <Page Include="UI\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -98,11 +103,11 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="MainWindow.xaml.cs">
+    <Compile Include="UI\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="SettingsWindow.xaml">
+    <Page Include="UI\SettingsWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -138,6 +143,7 @@
   <ItemGroup>
     <None Include="Resources\GrblErrors.txt" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
